@@ -1,3 +1,8 @@
+2009-10-22 Ian Rutt
+ * libglide/glide_temp.F90: Created derived type for full temperature
+   solution parameters. Began populating this. 
+ * Regtested against e2.a and e2.h
+
 2009-10-21 Ian Rutt
  * libglide/glide_temp.F90: More refactoring progress. Preparation for
    variable time-step. Bug fixed: regtest passes (e2.a and e2.h)
